maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:14: error: expected class or object definition
def keepHandOnSideWall() = {
^IslandMaze:25: error: Unmatched closing brace '}' ignored here
}
^