maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    }
    while (!estFaceMur) {
      avance()
    }
    while (estFaceMur() && getDirection != Direction.NORTH) {
      keepHandOnSideWall()
    }
  }
}

def keepHandOnSideWall() = {
  if (!estFaceMur()) {
    gauche()
  }
  while (estFaceMur()) {
    droite()
  }
  avance()
}